update swagger path, delete some testcase, upd readme
