# docs/swagger.json
@@ -200,7 +200,7 @@
                 }
             }
         },
-        "/patients": {
+        "/patient": {
             "get": {
                 "security": [
                     {
@@ -304,7 +304,7 @@
                 }
             }
         },
-        "/patients/search": {
+        "/patient/search": {
             "post": {
                 "security": [
                     {
@@ -355,7 +355,7 @@
                 }
             }
         },
-        "/patients/{id}": {
+        "/patient/{id}": {
             "get": {
                 "security": [
                     {
@@ -372,7 +372,7 @@
                 "tags": [
                     "patients"
                 ],
-                "summary": "Search patient by identifier",
+                "summary": "Search patient by identifier (nationalId or passportId)",
                 "parameters": [
                     {
                         "type": "string",
@@ -662,7 +662,8 @@
             "properties": {
                 "dateOfBirth": {
                     "description": "expected format: YYYY-MM-DD",
-                    "type": "string"
+                    "type": "string",
+                    "example": "1990-01-15"
                 },
                 "email": {
                     "type": "string"
@@ -852,7 +853,8 @@
             "properties": {
                 "dateOfBirth": {
                     "description": "YYYY-MM-DD",
-                    "type": "string"
+                    "type": "string",
+                    "example": "1990-01-15"
                 },
                 "email": {
                     "type": "string"
